--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -26,7 +26,7 @@ COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
 
 EXPOSE 80
 
-RUN sudo useradd -u 10014 -m newuser
+RUN  useradd -u 10014 -m newuser
 
 RUN su -c 'chown -R nginx:nginx /app' 10014 && \
     su -c 'chmod -R 755 /app' 10014 && \
