--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -24,13 +24,9 @@ RUN rm -rf /usr/share/nginx/html/*
 
 COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
 
-EXPOSE 80
-
 RUN addgroup -g 10014 newgroup && \
-    adduser -D -u 10014 -G newgroup newuser
-
-RUN chown -R nginx:nginx /app && \
-    chmod -R 755 /usr/share/nginx/html && \
+    adduser -D -u 10014 -G newgroup newuser && \
+    chown -R nginx:nginx /usr/share/nginx/html && \
     chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /var/log/nginx && \
     chown -R nginx:nginx /etc/nginx/conf.d && \
